# cpp-game

./: CMakeLists.txt  README.md  application.cpp  application.hpp  game.cpp  game.hpp  logger.cpp  logger.hpp  string_util.cpp  string_util.hpp  type_definitions.hpp  vulkan_window.cpp  vulkan_window.hpp  window.cpp  window.hpp  windows_definitions.hpp
shaders/: compile_shaders.bat  shader.vert
src/: file_reader.cpp  file_reader.hpp  game.cpp  game.hpp  logger.cpp  logger.hpp  string_util.cpp  vertex.hpp  vulkan_window.cpp  vulkan_window.hpp  window.cpp  window.hpp  windows_definitions.hpp
